updating: testing 0 to 3, continue with 4 - SparePartController endpoints