@@ -6,8 +6,9 @@ import com.bunsen.api.aftercare.dto.request.TechnicianUpdateRequest;
 import com.bunsen.api.aftercare.dto.response.TechnicianResponse;
 import com.bunsen.api.aftercare.dto.response.TechnicianWorkloadResponse;
 import com.bunsen.api.aftercare.enums.ERole;
-import com.bunsen.api.aftercare.exception.BadRequestException;
+import com.bunsen.api.aftercare.exception.DuplicateResourceException;
 import com.bunsen.api.aftercare.exception.ResourceNotFoundException;
+import com.bunsen.api.aftercare.exception.ValidationException;
 import com.bunsen.api.aftercare.model.Role;
 import com.bunsen.api.aftercare.model.ServiceTask;
 import com.bunsen.api.aftercare.model.User;
@@ -19,7 +20,6 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.time.LocalDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -31,15 +31,21 @@ public class TechnicianService {
     private final RoleRepository roleRepository;
     private final ServiceTaskRepository serviceTaskRepository;
     private final PasswordEncoder passwordEncoder;
+    private final SystemService systemService;
+    private final ActivityLogService activityLogService;
 
     public TechnicianService(TechnicianRepository technicianRepository,
                              RoleRepository roleRepository,
                              ServiceTaskRepository serviceTaskRepository,
-                             PasswordEncoder passwordEncoder) {
+                             PasswordEncoder passwordEncoder,
+                             SystemService systemService,
+                             ActivityLogService activityLogService1) {
         this.technicianRepository = technicianRepository;
         this.roleRepository = roleRepository;
         this.serviceTaskRepository = serviceTaskRepository;
         this.passwordEncoder = passwordEncoder;
+        this.systemService = systemService;
+        this.activityLogService = activityLogService1;
     }
 
     public List<TechnicianResponse> getAllTechnicians() {
@@ -95,18 +101,17 @@ public class TechnicianService {
                 .collect(Collectors.toList());
     }
 
-    public TechnicianResponse createTechnician(@Valid TechnicianRequest request) {
-        // Validate username
-        if (technicianRepository.existsById(request.getUsername()) ||
-                technicianRepository.findAll().stream()
-                        .anyMatch(u -> u.getUsername().equals(request.getUsername()))) {
-            throw new BadRequestException("Username is already taken");
+    public TechnicianResponse createTechnician(@Valid TechnicianRequest request, String creatorId) {
+        // Use DuplicateResourceException
+        if (technicianRepository.findAll().stream()
+                .anyMatch(u -> u.getUsername().equals(request.getUsername()))) {
+            throw new DuplicateResourceException("Technician", "username", request.getUsername());
         }
 
-        // Validate email
+        // Use DuplicateResourceException
         if (technicianRepository.findAll().stream()
                 .anyMatch(u -> u.getEmail().equals(request.getEmail()))) {
-            throw new BadRequestException("Email is already in use");
+            throw new DuplicateResourceException("Technician", "email", request.getEmail());
         }
 
         User technician = new User();
@@ -125,7 +130,8 @@ public class TechnicianService {
 
         // Assign TECHNICIAN role
         Role technicianRole = roleRepository.findByName(ERole.ROLE_TECHNICIAN)
-                .orElseThrow(() -> new RuntimeException("Technician role not found"));
+                // Use ResourceNotFoundException for required dependency
+                .orElseThrow(() -> new ResourceNotFoundException("Technician role", "name", ERole.ROLE_TECHNICIAN.name()));
         Set<Role> roles = new HashSet<>();
         roles.add(technicianRole);
         technician.setRoles(roles);
@@ -133,18 +139,23 @@ public class TechnicianService {
         technician.setCreatedBy("ADMIN");
 
         User savedTechnician = technicianRepository.save(technician);
+
+        activityLogService.createLog(creatorId, "TECHNICIAN_CREATED",
+                String.format("New technician %s created. ID: %s.", savedTechnician.getFullName(), savedTechnician.getId()));
+
         return convertToResponse(savedTechnician);
     }
 
-    public TechnicianResponse updateTechnician(String id, @Valid TechnicianUpdateRequest request) {
+    public TechnicianResponse updateTechnician(String id, @Valid TechnicianUpdateRequest request, String updatorId) {
         User technician = findTechnicianById(id);
 
-        if (request.getEmail() != null) {
+        if (request.getEmail() != null && !technician.getEmail().equals(request.getEmail())) {
             // Check if email is already in use by another user
             boolean emailExists = technicianRepository.findAll().stream()
                     .anyMatch(u -> !u.getId().equals(id) && u.getEmail().equals(request.getEmail()));
+            // Use DuplicateResourceException
             if (emailExists) {
-                throw new BadRequestException("Email is already in use");
+                throw new DuplicateResourceException("Technician", "email", request.getEmail());
             }
             technician.setEmail(request.getEmail());
         }
@@ -152,43 +163,69 @@ public class TechnicianService {
         if (request.getFullName() != null) {
             technician.setFullName(request.getFullName());
         }
-
         if (request.getPhoneNumber() != null) {
             technician.setPhoneNumber(request.getPhoneNumber());
         }
-
         if (request.getPhotoUrl() != null) {
             technician.setPhotoUrl(request.getPhotoUrl());
         }
-
         if (request.getEnabled() != null) {
             technician.setEnabled(request.getEnabled());
         }
-
         if (request.getStatus() != null) {
             technician.setStatus(request.getStatus());
         }
 
         User updatedTechnician = technicianRepository.save(technician);
+
+        activityLogService.createLog(updatorId, "TECHNICIAN_UPDATED",
+                String.format("Technician %s (%s) details updated.", updatedTechnician.getFullName(), updatedTechnician.getId()));
+
         return convertToResponse(updatedTechnician);
     }
 
-    public void deleteTechnician(String id) {
+    public void deleteTechnician(String id, String deleterId) {
         User technician = findTechnicianById(id);
+
+        // CRITICAL SECURITY CHECK: Prevent deletion of the SYSTEM user
+        if (systemService.isSystemUser(id)) {
+            throw new ValidationException("The SYSTEM user account cannot be deleted.");
+        }
+
+        // CRITICAL SECURITY CHECK 1: Prevent self-deletion
+        if (id.equals(deleterId)) {
+            throw new ValidationException("Cannot delete your own user account.");
+        }
 
         // Check if technician has active tasks
         Long activeTasks = technicianRepository.countActiveTasksByTechnician(id);
         if (activeTasks > 0) {
-            throw new BadRequestException("Cannot delete technician with active tasks. Please reassign tasks first.");
+            // Use ValidationException for business rule violation
+            throw new ValidationException("Cannot delete technician with active tasks. Please reassign tasks first.");
         }
+        // Dependency Resolution: Reassign Logs
+        User systemUser = systemService.getSystemUser();
+
+        // Reassign all logs from the technician being deleted to the SYSTEM_USER
+        int reassignCount = activityLogService.reassignLogs(technician.getId(), systemUser.getId());
 
         technicianRepository.delete(technician);
+
+        // Log the number of reassigned records.
+        activityLogService.createLog(deleterId, "TECHNICIAN_DELETED",
+                String.format("Technician %s (%s) deleted. Logs reassigned: %d.",
+                        technician.getFullName(), technician.getId(), reassignCount));
     }
 
-    public TechnicianResponse toggleTechnicianStatus(String id) {
+    public TechnicianResponse toggleTechnicianStatus(String id, String updatorId) {
         User technician = findTechnicianById(id);
         technician.setStatus(!technician.isStatus());
         User updatedTechnician = technicianRepository.save(technician);
+
+        activityLogService.createLog(updatorId, "TECHNICIAN_STATUS_TOGGLED",
+                String.format("Technician %s (%s) status toggled to %s.",
+                        updatedTechnician.getFullName(), updatedTechnician.getId(), updatedTechnician.isStatus() ? "Active" : "Inactive"));
+
         return convertToResponse(updatedTechnician);
     }
 
@@ -201,7 +238,7 @@ public class TechnicianService {
         List<ServiceTask> activeTasks = serviceTaskRepository.findByTechnicianId(id).stream()
                 .filter(t -> t.getStatus() == ServiceTask.TaskStatus.PENDING ||
                         t.getStatus() == ServiceTask.TaskStatus.IN_PROGRESS)
-                .collect(Collectors.toList());
+                .toList();
 
         Long pendingCount = activeTasks.stream()
                 .filter(t -> t.getStatus() == ServiceTask.TaskStatus.PENDING)
@@ -257,12 +294,14 @@ public class TechnicianService {
     // Helper methods
     private User findTechnicianById(String id) {
         User user = technicianRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Technician not found with id: " + id));
+                // Use ResourceNotFoundException with clear message
+                .orElseThrow(() -> new ResourceNotFoundException("Technician", "id", id));
 
         // Verify user has TECHNICIAN role
         Boolean isTechnician = technicianRepository.isTechnician(id);
-        if (!isTechnician) {
-            throw new ResourceNotFoundException("User with id " + id + " is not a technician");
+        if (isTechnician == null || !isTechnician) {
+            // Use ResourceNotFoundException for business entity not found (i.e., not a Technician)
+            throw new ResourceNotFoundException("Technician", "id", id + " (Role check failed)");
         }
 
         return user;
